wrote the ideas down befor I forget

--- a/show.html
+++ b/show.html
@@ -249,7 +249,30 @@
                     download.innerHTML = element.downloaded;
                     status.innerHTML = element.available;
                 });
-                // generate the table here
+                /*TODO:
+                Add pageniation ie: the auto removal of table and update of values that is done for List of Playlists
+                 to the sublists and the main page
+
+                Next add an option to list and show vidoes that are not associated with any Playlists to do this update the 
+                listing to add the reference to the vidoes that are not associated with any Playlists as to be associated with
+                none this will make querying easier
+
+                Alternatively there can be a way to query vidoes whos url and reference are same seems stupid tho.
+
+                Add the socket.io javascript to being locally served
+
+                Test traefik with socket and then port the entire thing
+
+                Also find a way to make the downloads work in parallel but only 3||n running parallelly
+
+                Next add a way to update the playlist UpdatedAt when the playlist is updated or re-encountered
+
+                Lastly find a way to change the status of vidoes in the Available column when they are found to be 
+                removed or something when re-checking the playlist
+
+                Thats is add a way to re-check the playlist after a few weeks (or as specified by the user) form the last 
+                UpdatedAt time of the playlist.
+                */
 
             });
         };
