--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
     <script src="/ytdiff/assets/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="/ytdiff/assets/socket.io.min.js" crossorigin="anonymous"></script>
     <style>
-        .list-table {
+        .container-table {
             max-height: 80vh;
             overflow-y: scroll;
             padding-bottom: 15px;
+        }
+
+        .container-table table thead th {
+            position: sticky;
+            top: 0;
         }
     </style>
 </head>
@@ -32,6 +37,7 @@
     <div class="container">
         <div class="row">
             <div class="col">
+                <h3 style="visibility: hidden;">#</h3>
                 <form class="mb-2">
                     <label for="url" class="form-label">URL: </label>
                     <input type="text" class="form-control" placeholder="url" name="url_input" id="url" />
@@ -39,6 +45,8 @@
                     <input type="number" class="form-control" placeholder="1" name="start_input" id="start" />
                     <label for="stop" class="form-label">Stop: </label>
                     <input type="number" class="form-control" placeholder="10" name="stop_input" id="stop" />
+                    <label for="chunk" class="form-label">Chunk: </label>
+                    <input type="number" class="form-control" placeholder="10" name="stop_input" id="chunk" />
                     <!--Removing this wouldn't be such a bad idea, yt-dlp can handle it on it's own,
                         if you are passing an url like this https://www.youtube.com/watch?v=id&list=id
                         and wnat to use the --no-playlist option it's more work than it's worth just pass
@@ -46,7 +54,7 @@
                     <!--<label for="is_single" class="form-label">Single video:</label>
                     <input type="checkbox" class="form-check-input" name="is_single" id="is_single">-->
                 </form>
-                <button id="listit" type="button" onclick="post()" class="btn btn-primary">List</button>
+                <button id="listit" type="button" onclick="send_data()" class="btn btn-primary">List</button>
                 <div class="btn-group" role="group">
                     <button id="all" type="button" onclick="select_all()" class="btn btn-primary">Select all</button>
                     <button id="none" type="button" onclick="select_none()" class="btn btn-primary">Select none</button>
@@ -56,21 +64,25 @@
             </div>
             <div class="col">
                 <h3>List:</h3>
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">Title</th>
-                        </tr>
-                    </thead>
-                    <div class="list-table">
-                        <tbody id="listing">
-                            <!--all items would be added here
+                <div class="container-table">
+                    <table class="table table-responsive">
+                        <thead>
+                            <tr>
+                                <th scope="col" class="table-dark">#</th>
+                                <th scope="col" class="table-dark">Title</th>
+                                <th scope="col" class="table-dark">Saved</th>
+                                <th scope="col" class="table-dark">Avail.</th>
+                            </tr>
+                        </thead>
+                        <div>
+                            <tbody id="listing">
+                                <!--all items would be added here
                             get the pagenition to work also make only the tbody
                             scrollable not the entire table-->
-                        </tbody>
-                    </div>
-                </table>
+                            </tbody>
+                        </div>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
@@ -86,12 +98,13 @@
     </div>
     <script defer>
         window.onload = sockSetup();
-        function post() {
+        function send_data() {
             var url = document.getElementById("url").value;
             var start = document.getElementById("start").value;
             var stop = document.getElementById("stop").value;
+            var chunk = document.getElementById("chunk").value;
             const table = document.getElementById("listing");
-            console.log("URL: " + url, "Start: " + start, "Stop: " + stop);//, "Single: " + single);
+            console.log("URL: " + url, "Start: " + start, "Stop: " + stop, "Chunk: " + chunk);
             fetch("/ytdiff/list", {
                 method: "post",
                 headers: {
@@ -103,7 +116,8 @@
                 body: JSON.stringify({
                     url: url,
                     start: start,
-                    stop: stop
+                    stop: stop,
+                    chunk: chunk
                 })
             }).then((response) => response.text()).then((text) => {
                 response_list = text.slice(0, -2).split("\n").slice(0, -1);
