--- a/index.html
+++ b/index.html
@@ -59,6 +59,17 @@
                     <button id="all" type="button" onclick="select_all()" class="btn btn-primary">Select all</button>
                     <button id="none" type="button" onclick="select_none()" class="btn btn-primary">Select none</button>
                 </div>
+                <form class="mb-2">
+                    <label for="start" class="form-label">Start: </label>
+                    <input type="number" class="form-control" placeholder="11" name="start_input" id="start_sub" />
+                    <label for="stop" class="form-label">Stop: </label>
+                    <input type="number" class="form-control" placeholder="20" name="stop_input" id="stop_sub" />
+                </form>
+                <div class="btn-group" role="group">
+                    <button id="next" type="button" onclick="next_sub()" class="btn btn-primary">Next</button>
+                    <button id="back" type="button" onclick="back_sub()" class="btn btn-primary">Back</button>
+                    <button id="back" type="button" onclick="depopulateSubList()" class="btn btn-primary">Clear</button>
+                </div>
                 <button id="dnld" type="button" onclick="download()" class="btn btn-primary">Download
                     Selected</button>
             </div>
@@ -130,7 +141,6 @@
                 response_list = JSON.parse(text);
                 //response_list = text.slice(0, -2).split("\n").slice(0, -1);
                 console.log(response_list['rows'], response_list['rows'].length)
-
                 response_list['rows'].forEach(async element => {
                     console.log(element);
                     /*
@@ -225,9 +235,104 @@
             });
         }
 
-        function alert_bs() {
-
+        function next_sub() {
+            depopulateSubList();
+            if (document.getElementById("start_sub").value === "") {
+                document.getElementById("start_sub").value = 0;
+            } else {
+                document.getElementById("start_sub").value = parseInt(document.getElementById("start_sub").value, 10) + 10;
+            }
+            if (document.getElementById("stop_sub").value === "") {
+                document.getElementById("stop_sub").value = 10;
+            } else {
+                document.getElementById("stop_sub").value = parseInt(document.getElementById("stop_sub").value, 10) + 10;
+            }
+            // maybe get add an orphaned button too just in case
+            // this is a quick test it probably shouldn't work
+            if ((url_global == "None") && (document.getElementById("url").value != ""))
+                url_global = document.getElementById("url").value;
+            getSubList(url_global);
         }
+        function back_sub() {
+            depopulateSubList();
+            if (document.getElementById("start_sub").value === "") {
+                document.getElementById("start_sub").value = 0;
+            } else if ((parseInt(document.getElementById("start_sub").value, 10) - 10) <= 0) {
+                document.getElementById("start_sub").value = 0;
+            } else {
+                document.getElementById("start_sub").value = parseInt(document.getElementById("start_sub").value, 10) - 10;
+            }
+
+            if (document.getElementById("stop_sub").value === "") {
+                document.getElementById("stop_sub").value = 10;
+            } else if ((parseInt(document.getElementById("stop_sub").value, 10) - 10) <= 10) {
+                document.getElementById("stop_sub").value = 10;
+            } else {
+                document.getElementById("stop_sub").value = parseInt(document.getElementById("stop_sub").value, 10) - 10;
+            }
+            if ((url_global == "None") && (document.getElementById("url").value != ""))
+                url_global = document.getElementById("url").value;
+            getSubList(url_global);
+        }
+
+        function depopulateSubList() {
+            const table = document.getElementById("listing");
+            // now that listing is done it tbody i needs to start form 0, change it in other places too
+            for (var i = 0; i < table.rows.length;) {
+                table.deleteRow(i);
+            }
+        };
+
+        function getSubList(url) {
+            console.log("Querying url: ", url);
+            depopulateSubList();
+            var start = document.getElementById("start_sub").value;
+            var stop = document.getElementById("stop_sub").value;
+            const table = document.getElementById("listing");
+            fetch("/ytdiff/getsub", {
+                method: "post",
+                headers: {
+                    'Accept': 'application/json',
+                    'Content-Type': 'application/json'
+                },
+
+                //make sure to serialize your JSON body
+                body: JSON.stringify({
+                    url: url,
+                    start: start,
+                    stop: stop
+                })
+            }).then((response) => response.text()).then((text) => {
+                //console.log(text);
+                data = JSON.parse(text);
+                console.log(data);
+                data["rows"].forEach(element => {
+                    /*
+                        # 	Title 	Downloaded 	Available
+                    */
+                    const row = table.insertRow();
+                    const select = row.insertCell(0);
+                    const title = row.insertCell(1);
+                    const download = row.insertCell(2);
+                    const status = row.insertCell(3);
+
+                    let checkbox = document.createElement("input");
+                    checkbox.type = "checkbox";
+                    checkbox.className = "form-check-input me-1";
+                    checkbox.value = "";
+                    checkbox.id = element.id;
+
+                    let link = document.createElement('a');
+                    link.href = element.url;
+                    link.appendChild(document.createTextNode(element.title));
+                    select.appendChild(checkbox);
+                    title.appendChild(link);
+                    download.innerHTML = element.downloaded;
+                    status.innerHTML = element.available;
+                });
+            });
+            url_global = url;
+        };
     </script>
 </body>
 
