--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
                     <input type="number" class="form-control" placeholder="20" name="stop_input" id="stop_sub" />
                 </form>
                 <div class="btn-group" role="group">
-                    <button id="next" type="button" onclick="next_sub()" class="btn btn-primary">Next</button>
-                    <button id="back" type="button" onclick="back_sub()" class="btn btn-primary">Back</button>
-                    <button id="back" type="button" onclick="depopulateSubList()" class="btn btn-primary">Clear</button>
+                    <button id="next-sub" type="button" onclick="next_sub()" class="btn btn-primary">Next</button>
+                    <button id="back-sub" type="button" onclick="back_sub()" class="btn btn-primary">Back</button>
+                    <button id="clear" type="button" onclick="depopulateSubList()" class="btn btn-primary">Clear</button>
                 </div>
                 <button id="dnld" type="button" onclick="download()" class="btn btn-primary">Download
                     Selected</button>
